--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,7 @@
-MONGODB_URI=mongodb+srv://tabassumanika210:<32OgE2sbmUlJIA33>@cluster0.fj7m3pt.mongodb.net/chat_db?retryWrites=true& 
-w=majority&appName=Cluster0;
-PORT=5001;
+MONGODB_URI=mongodb+srv://tabassumanika210:32OgE2sbmUlJIA33@cluster0.fj7m3pt.mongodb.net/chat-app?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
+
+# mongodb+srv://tabassumanika210:<32OgE2sbmUlJIA33>@cluster0.fj7m3pt.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0;
+
 # Pass--32OgE2sbmUlJIA33
 # tabassumanika210-username
